[feature] actualizacion de elementos a petición del cliente: Quitar sección de medicamentos, Agregar solo facebook como red social, cambiar imagenes para los slides de valores y visión

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
     <div class="swiper-button-next"></div>
   </div>
   <!-- Medicamentos de alta especialidad -->
-  <section class="section">
+  <!-- <section class="section">
     <div class="columns">
       <div class="column is-8 is-offset-2">
         <section class="section has-text-centered">
@@ -238,7 +238,7 @@
         </section>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- Donde estamos -->
   <section class="section" style="background-color: #FFF;" id="Ubicacion">
     <div class="columns">
@@ -246,7 +246,8 @@
         <div class="columns">
           <div class="column">
             <h2 class="title biomedicColor has-text-centered-mobile">¿Dónde estamos?</h2>
-            <p class="subtitle biomedicColor has-text-centered-mobile">Loma del Molino No.7, Col. Loma Dorada Querétaro C.P. 76060</p>
+            <p class="subtitle biomedicColor has-text-centered-mobile">Loma del Molino No.7, Col. Loma Dorada Querétaro
+              C.P. 76060</p>
           </div>
           <div class="column">
             <div class="columns">
@@ -294,7 +295,10 @@
       <div class="column is-10 is-offset-1">
         <div class="columns">
           <div class="column has-text-centered-mobile">
-            <a href="https://facebook.com" target="_blank">
+            <a href="https://www.facebook.com/profile.php?id=100091802617865" target="_blank">
+              <ion-icon size="large" class="footer-logo" name="logo-facebook"></ion-icon>
+            </a>
+            <!-- <a href="https://facebook.com" target="_blank">
               <ion-icon class="footer-logo" name="logo-facebook"></ion-icon>
             </a>
             <a href="https://facebook.com" target="_blank">
@@ -308,10 +312,7 @@
             </a>
             <a href="https://facebook.com" target="_blank">
               <ion-icon class="footer-logo" name="logo-facebook"></ion-icon>
-            </a>
-            <a href="https://facebook.com" target="_blank">
-              <ion-icon class="footer-logo" name="logo-facebook"></ion-icon>
-            </a>
+            </a> -->
           </div>
           <div class="column has-text-right has-text-centered-mobile">
             <p class="has-text-white">All Rights Reserved 2023 Biomedic Farma</p>
