--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <section class="section mainBackground">
     <nav class="navbar menu px-6 is-hidden-mobile" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
-        <a class="navbar-item" href="https://bulma.io">
+        <a class="navbar-item" href="#">
           <img class="is-hidden-mobile" src="src/logoLetras.png" width="257" height="40">
         </a>
 
@@ -88,7 +88,7 @@
                   </section>
                   <p class="is-size-5 biomedicColor has-text-centered-mobile">Comercializamos medicamentos de alta
                     especialidad a
-                    hospitalesprivados
+                    hospitales privados
                     y de Gobierno</p>
                 </div>
                 <div class="column">
