--- a/index.html
+++ b/index.html
@@ -298,9 +298,11 @@
             <a href="https://www.facebook.com/profile.php?id=100091802617865" target="_blank">
               <ion-icon size="large" class="footer-logo" name="logo-facebook"></ion-icon>
             </a>
-            <!-- <a href="https://facebook.com" target="_blank">
-              <ion-icon class="footer-logo" name="logo-facebook"></ion-icon>
+            <a href="https://www.instagram.com/biomedicfarma/?fbclid=IwAR28HjLHhq7I91pqTjJC8QafqfbHyWTFwsTWgIlDlLgOqEOP-Hm4CWTVux8"
+              target="_blank">
+              <ion-icon size="large" class="footer-logo" name="logo-instagram"></ion-icon>
             </a>
+            <!-- 
             <a href="https://facebook.com" target="_blank">
               <ion-icon class="footer-logo" name="logo-facebook"></ion-icon>
             </a>
